# solver24

./: Cargo.toml  README.md
notes/: benchmark
src/: expr.rs  main.rs  operations.rs  opsold.rs  solver.rs  types.rs
src/operations/: bitwise.rs  calculus.rs  core_math.rs  mod.rs  special.rs  trig.rs
